# GapRunner

./: README.md
gappers_trader/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =13.0  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_CLI.md  README_NEW.md  app.py  app_new.py  cli_collect.py  cli_gaps.py  cli_paper_trading.py  docker-compose.yml  pyproject.toml  requirements.txt
gappers_trader/.github/workflows/: ci.yml
gappers_trader/gappers/: __init__.py  analytics.py  backtest.py  cli.py  config.py  config_new.py  data_collector.py  data_manager.py  data_providers.py  datafeed.py  dead_simple.py  gap_engine.py  live.py  portfolio_engine.py  signals.py  simple_backtest.py  simulation_manager.py  universe.py
gappers_trader/simulation_saves/json/: Backtest_20250804_212456_20250804_212456.json  Simulation Save 1_20250804_211923.json  test-paper-trading_20250806_093252.json  test_20250804_193930.json
gappers_trader/tests/: __init__.py  conftest.py  test_analytics.py  test_backtest.py  test_cli.py  test_datafeed.py  test_live.py  test_signals.py  test_universe.py
