[tool.poetry]
name = "gappers-trader"
version = "0.1.0"
description = "Production-grade overnight gap trading system with live paper-trading support"
authors = ["GapRunner Team"]
readme = "README.md"
packages = [{include = "gappers"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.0"
yfinance = "^0.2.33"
vectorbt = "^0.26.0"
streamlit = "^1.29.0"
alpaca-trade-api = "^3.1.1"
pyarrow = "^14.0.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
requests = "^2.31.0"
click = "^8.1.7"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
scipy = "^1.11.0"
numba = "^0.59.0"
rich = "^13.7.0"
PyYAML = "^6.0.1"
fastparquet = "^2024.2.0"
schedule = "^1.2.0"
tqdm = "^4.66.0"
polygon-api-client = {version = "^1.13.0", optional = true}
tiingo = {version = "^0.14.0", optional = true}
iexfinance = {version = "^0.5.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
pytest-mock = "^3.12.0"

[tool.poetry.extras]
premium = ["polygon-api-client", "tiingo", "iexfinance"]

[tool.poetry.scripts]
gappers = "gappers.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "ISC", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLR", "PLW", "RUF"]
ignore = ["S101", "PLR0913"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=gappers --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["gappers"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80